Fix : Key word scrap and search not aligned

--- a/signin/static/css/styles.css
+++ b/signin/static/css/styles.css
@@ -390,12 +390,12 @@ label.light {
   color: #eb3ff;
   text-align: center;
   border-radius: 40px;
-  padding: 25px 0;
+  padding: 10px 0;
   position: absolute;
   z-index: 3;
   bottom: 125%;
   left: 50%;
-  margin-left: 30px;
+  margin-left: -60px;
   font-weight: bold;
 }
 
